<resources>
    <string name="app_name">Lab8PM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="options">Options</string>
    <string name="Prueba_txt">Name profile</string>
    <string name="PruebaMasc">PruebaMasculino</string>
    <string name="gender">Gender</string>
    <string name="specie">Specie:</string>
    <string name="status">Status</string>
    <string name="PruebaAlive">AlivePrueba</string>
    <string name="HumanoPrueba">HumanoPrueba</string>
</resources>